app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minha-aplicacao-service
  namespace: renda-fixa
spec:
  selector:
    app: minha-aplicacao
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
